Correction base on Findbugs Report